--- a/playbook.yml
+++ b/playbook.yml
@@ -14,7 +14,7 @@
       
   - name: "Open Port {{ port }}"
     firewalld:
-      port: "{{ port }}/tcp"
+      port: "{{ port_tcp }}/tcp"
       permanent: yes
       state: enabled
 
